[tool.poetry]
name = "data-structures-algorithms"
version = "0.1.0"
description = ""
authors = ["Zheng-Kai Ye <supon3060@gmail.com>"]
readme = "README.md"
packages = [{include = "data_structures_algorithms", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
